--- a/main.html
+++ b/main.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            font-family: Arial, sans-serif;
+        }
+        .testimonial-container {
+            width: 60%;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+        .testimonial {
+            padding: 15px;
+            border-left: 5px solid #007bff;
+            background-color: #f9f9f9;
+            margin-bottom: 15px;
+            border-radius: 5px;
+        }
+        .testimonial p {
+            font-size: 16px;
+            color: #333;
+        }
+        .author {
+            text-align: right;
+            font-style: italic;
+            font-weight: bold;
+            color: #555;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="testimonial-container">
+        <div class="testimonial">
+            <p>"This product exceeded my expectations! The quality is outstanding and the service was excellent."</p>
+            <p class="author">- John Doe</p>
+        </div>
+        <div class="testimonial">
+            <p>"I had an amazing experience using this service. Highly recommended!"</p>
+            <p class="author">- Jane Smith</p>
+        </div>
+    </div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
