--- a/main.html
+++ b/main.html
@@ -17,6 +17,12 @@
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            text-align: center;
+        }
+        .testimonial-container h2 {
+            margin-bottom: 20px;
+            font-size: 24px;
+            color: #333;
         }
         .testimonial {
             padding: 15px;
@@ -39,12 +45,13 @@
 </head>
 <body>
     <div class="testimonial-container">
+        <h2>Testimonials</h2>
         <div class="testimonial">
-            <p>"This product exceeded my expectations! The quality is outstanding and the service was excellent."</p>
+            <p>"This product is amazing! I highly recommend it to anyone in need of a solution like this."</p>
             <p class="author">- John Doe</p>
         </div>
         <div class="testimonial">
-            <p>"I had an amazing experience using this service. Highly recommended!"</p>
+            <p>"I have been using this for a few weeks now and it has completely transformed my workflow."</p>
             <p class="author">- Jane Smith</p>
         </div>
     </div>
