--- a/main.html
+++ b/main.html
@@ -47,11 +47,11 @@
     <div class="testimonial-container">
         <h2>Testimonials</h2>
         <div class="testimonial">
-            <p>"This product is amazing! I highly recommend it to anyone in need of a solution like this."</p>
+            <p>"This product exceeded my expectations! The quality is outstanding and the service was excellent."</p>
             <p class="author">- John Doe</p>
         </div>
         <div class="testimonial">
-            <p>"I have been using this for a few weeks now and it has completely transformed my workflow."</p>
+    https://www.svgrepo.com/show/345223/three-dots-vertical.svg        <p>"I had an amazing experience using this service. Highly recommended!"</p>
             <p class="author">- Jane Smith</p>
         </div>
     </div>
