--- a/main.html
+++ b/main.html
@@ -1,60 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Testimonials</title>
     <style>
         body {
             background-color: #f5f5f5;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
             font-family: Arial, sans-serif;
         }
-        .testimonial-container {
+        .container {
             width: 60%;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-align: center;
+            margin: 50px auto;
         }
-        .testimonial-container h2 {
-            margin-bottom: 20px;
+        h2 {
             font-size: 24px;
-            color: #333;
+            font-weight: bold;
         }
         .testimonial {
+            background-color: white;
             padding: 15px;
-            border-left: 5px solid #007bff;
-            background-color: #f9f9f9;
-            margin-bottom: 15px;
-            border-radius: 5px;
-        }
-        .testimonial p {
-            font-size: 16px;
-            color: #333;
+            border: 1px solid #ddd;
+            margin-bottom: 10px;
         }
         .author {
             text-align: right;
             font-style: italic;
             font-weight: bold;
-            color: #555;
         }
     </style>
 </head>
 <body>
-    <div class="testimonial-container">
+    <div class="container">
         <h2>Testimonials</h2>
         <div class="testimonial">
-            <p>"This product exceeded my expectations! The quality is outstanding and the service was excellent."</p>
+            <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
             <p class="author">- John Doe</p>
         </div>
         <div class="testimonial">
-    https://www.svgrepo.com/show/345223/three-dots-vertical.svg        <p>"I had an amazing experience using this service. Highly recommended!"</p>
+            <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
             <p class="author">- Jane Smith</p>
         </div>
     </div>
-    <script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
