--- a/main.html
+++ b/main.html
@@ -3,43 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testimonials</title>
+    <title>Testimonial Section</title>
     <style>
         body {
             background-color: #f5f5f5;
             font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
         }
-        .container {
-            width: 60%;
-            margin: 50px auto;
-        }
-        h2 {
-            font-size: 24px;
-            font-weight: bold;
+        .main-container {
+            padding: 40px;
         }
         .testimonial {
-            background-color: white;
-            padding: 15px;
-            border: 1px solid #ddd;
-            margin-bottom: 10px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: #fff;
+            margin-bottom: 20px;
+        }
+        .testimonial p {
+            margin: 0;
         }
         .author {
             text-align: right;
             font-style: italic;
-            font-weight: bold;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h2>Testimonials</h2>
+    <div class="main-container">
+		<h1>Testimonial</h1>
         <div class="testimonial">
-            <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
-            <p class="author">- John Doe</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero.</p>
+            <p class="author">John Doe</p>
         </div>
         <div class="testimonial">
-            <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
-            <p class="author">- Jane Smith</p>
+            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Aenean lacinia bibendum nulla sed consectetur.</p>
+            <p class="author">Jane Smith</p>
         </div>
     </div>
 </body>
